--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,10 @@
 * Browsers: last 10 version
 */
 
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.3.6,
-* Autoprefixer: v10.3.1
-* Browsers: last 10 version
-*/
-
 body {
 	position: relative;
-	background: -o-linear-gradient(top, rgba(37, 37, 44, 1) 0%, #0C0C0E 100%);
 	background: -webkit-gradient(linear, left top, left bottom, from(rgba(37, 37, 44, 1)), to(#0C0C0E));
+	background: -o-linear-gradient(top, rgba(37, 37, 44, 1) 0%, #0C0C0E 100%);
 	background: linear-gradient(180deg, rgba(37, 37, 44, 1) 0%, #0C0C0E 100%);
 	min-height: 100vh;
 	position: relative;
@@ -33,8 +26,8 @@ body:after {
 	width: 100%;
 	height: 1250px;
 	opacity: .2;
-	background: -o-radial-gradient(50% 24.92%, 145.91% 78.47%, rgba(34, 34, 40, 0) 0%, #232328 100%), -o-linear-gradient(top, rgba(12, 12, 14, 0) 0%, #232328 100%), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /160%;
 	background: radial-gradient(145.91% 78.47% at 50% 24.92%, rgba(34, 34, 40, 0) 0%, #232328 100%), -webkit-gradient(linear, left top, left bottom, from(rgba(12, 12, 14, 0)), to(#232328)), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /160%;
+	background: -o-radial-gradient(50% 24.92%, 145.91% 78.47%, rgba(34, 34, 40, 0) 0%, #232328 100%), -o-linear-gradient(top, rgba(12, 12, 14, 0) 0%, #232328 100%), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /160%;
 	background: radial-gradient(145.91% 78.47% at 50% 24.92%, rgba(34, 34, 40, 0) 0%, #232328 100%), linear-gradient(180deg, rgba(12, 12, 14, 0) 0%, #232328 100%), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /160%;
 	z-index: -1;
 }
@@ -361,8 +354,8 @@ section {
 	padding: 90px 40px;
 	top: calc(50% - 90px);
 	border: 0 solid #000;
-	background: -o-linear-gradient(right, rgba(196, 196, 196, 0) 0%, rgba(191, 191, 191, 0.1) 117.5%);
 	background: -webkit-gradient(linear, right top, left top, from(rgba(196, 196, 196, 0)), color-stop(117.5%, rgba(191, 191, 191, 0.1)));
+	background: -o-linear-gradient(right, rgba(196, 196, 196, 0) 0%, rgba(191, 191, 191, 0.1) 117.5%);
 	background: linear-gradient(270deg, rgba(196, 196, 196, 0) 0%, rgba(191, 191, 191, 0.1) 117.5%);
 	-webkit-backdrop-filter: blur(80px);
 	backdrop-filter: blur(80px);
@@ -391,8 +384,8 @@ section {
 }
 
 .news__arrow.news__arrow_right {
-	background: -o-linear-gradient(right, rgba(191, 191, 191, 0.1) 0%, rgba(196, 196, 196, 0) 117.5%);
 	background: -webkit-gradient(linear, right top, left top, from(rgba(191, 191, 191, 0.1)), color-stop(117.5%, rgba(196, 196, 196, 0)));
+	background: -o-linear-gradient(right, rgba(191, 191, 191, 0.1) 0%, rgba(196, 196, 196, 0) 117.5%);
 	background: linear-gradient(270deg, rgba(191, 191, 191, 0.1) 0%, rgba(196, 196, 196, 0) 117.5%);
 	right: 25px;
 }
@@ -533,8 +526,8 @@ section {
 	bottom: 36%;
 	left: 10%;
 	height: 5px;
-	background: -o-linear-gradient(left, #FAC704 -1.63%, #FF7A00 101.63%);
 	background: -webkit-gradient(linear, left top, right top, color-stop(-1.63%, #FAC704), color-stop(101.63%, #FF7A00));
+	background: -o-linear-gradient(left, #FAC704 -1.63%, #FF7A00 101.63%);
 	background: linear-gradient(90deg, #FAC704 -1.63%, #FF7A00 101.63%);
 	z-index: -1;
 }
@@ -566,7 +559,7 @@ section {
 	transition: .2s linear;
 }
 
-.instructions__title {
+.instructions__title,.title {
 	font-weight: 900;
 	font-size: 48px;
 	line-height: 56px;
@@ -736,8 +729,8 @@ section {
 	padding: 50px 40px;
 	top: calc(100% - 80px);
 	border: 0 solid #000;
-	background: -o-linear-gradient(right, rgba(196, 196, 196, 0) 0%, rgba(191, 191, 191, 0.1) 117.5%);
 	background: -webkit-gradient(linear, right top, left top, from(rgba(196, 196, 196, 0)), color-stop(117.5%, rgba(191, 191, 191, 0.1)));
+	background: -o-linear-gradient(right, rgba(196, 196, 196, 0) 0%, rgba(191, 191, 191, 0.1) 117.5%);
 	background: linear-gradient(270deg, rgba(196, 196, 196, 0) 0%, rgba(191, 191, 191, 0.1) 117.5%);
 	-webkit-backdrop-filter: blur(80px);
 	backdrop-filter: blur(80px);
@@ -766,8 +759,8 @@ section {
 }
 
 .players__arrow.players__arrow_right {
-	background: -o-linear-gradient(right, rgba(191, 191, 191, 0.1) 0%, rgba(196, 196, 196, 0) 117.5%);
 	background: -webkit-gradient(linear, right top, left top, from(rgba(191, 191, 191, 0.1)), color-stop(117.5%, rgba(196, 196, 196, 0)));
+	background: -o-linear-gradient(right, rgba(191, 191, 191, 0.1) 0%, rgba(196, 196, 196, 0) 117.5%);
 	background: linear-gradient(270deg, rgba(191, 191, 191, 0.1) 0%, rgba(196, 196, 196, 0) 117.5%);
 	right: 50px;
 }
@@ -923,8 +916,8 @@ section {
 .stars:after {
 	position: absolute;
 	content: '';
-	background: -o-linear-gradient(top, rgba(20, 20, 24, 0.8) 0%, rgba(20, 20, 24, .9) 50%, #141418 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
 	background: -webkit-gradient(linear, left top, left bottom, from(rgba(20, 20, 24, 0.8)), color-stop(50%, rgba(20, 20, 24, .9)), to(#141418)), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
+	background: -o-linear-gradient(top, rgba(20, 20, 24, 0.8) 0%, rgba(20, 20, 24, .9) 50%, #141418 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
 	background: linear-gradient(180deg, rgba(20, 20, 24, 0.8) 0%, rgba(20, 20, 24, .9) 50%, #141418 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
 	top: 0;
 	left: 0;
@@ -1208,7 +1201,9 @@ section {
 .facebook.icon__path {
 	width: 13px !important;
 }
-
+.footer__buttons{
+	width:200px;
+}
 .footer__buttons .button img {
 	margin-left: 10px;
 	margin-right: 0;
@@ -1292,8 +1287,8 @@ section {
 	.stars:after {
 		position: absolute;
 		content: '';
-		background: -o-linear-gradient(top, rgba(21, 21, 24, 0.8) 0%, rgba(21, 21, 24, .9) 50%, #151518 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
 		background: -webkit-gradient(linear, left top, left bottom, from(rgba(21, 21, 24, 0.8)), color-stop(50%, rgba(21, 21, 24, .9)), to(#151518)), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
+		background: -o-linear-gradient(top, rgba(21, 21, 24, 0.8) 0%, rgba(21, 21, 24, .9) 50%, #151518 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
 		background: linear-gradient(180deg, rgba(21, 21, 24, 0.8) 0%, rgba(21, 21, 24, .9) 50%, #151518 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top left /100%;
 		top: 0;
 		left: 0;
@@ -1365,9 +1360,10 @@ section {
 }
 
 @media screen and (max-width:800px) {
-.to__top {
-display: none;
-}
+	.to__top {
+		display: none;
+	}
+
 	section {
 		margin: 100px 0;
 	}
@@ -1595,8 +1591,8 @@ display: none;
 	}
 
 	body:after {
-		background: -o-radial-gradient(50% 24.92%, 145.91% 78.47%, rgba(34, 34, 40, 0) 0%, #232328 100%), -o-linear-gradient(top, rgba(12, 12, 14, 0) 0%, #232328 100%), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /400%;
 		background: radial-gradient(145.91% 78.47% at 50% 24.92%, rgba(34, 34, 40, 0) 0%, #232328 100%), -webkit-gradient(linear, left top, left bottom, from(rgba(12, 12, 14, 0)), to(#232328)), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /400%;
+		background: -o-radial-gradient(50% 24.92%, 145.91% 78.47%, rgba(34, 34, 40, 0) 0%, #232328 100%), -o-linear-gradient(top, rgba(12, 12, 14, 0) 0%, #232328 100%), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /400%;
 		background: radial-gradient(145.91% 78.47% at 50% 24.92%, rgba(34, 34, 40, 0) 0%, #232328 100%), linear-gradient(180deg, rgba(12, 12, 14, 0) 0%, #232328 100%), url(../img/backgrounds/land-header-back.jpg) no-repeat top center /400%;
 	}
 
@@ -1637,8 +1633,8 @@ display: none;
 	}
 
 	.games__card.active .games-img-phone {
-		background: -o-linear-gradient(top, rgba(31, 31, 36, 0) 19.27%, #000000 100%);
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(19.27%, rgba(31, 31, 36, 0)), to(#000000));
+		background: -o-linear-gradient(top, rgba(31, 31, 36, 0) 19.27%, #000000 100%);
 		background: linear-gradient(180deg, rgba(31, 31, 36, 0) 19.27%, #000000 100%);
 		border: 5px solid #FAC704;
 		-webkit-box-shadow: 0px 4px 36px rgba(250, 199, 4, 0.24);
@@ -1694,8 +1690,8 @@ display: none;
 	}
 
 	.stars:after {
-		background: -o-linear-gradient(top, rgba(21, 21, 24, 0.8) 0%, rgba(21, 21, 24, .9) 50%, #151518 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top center /200%;
 		background: -webkit-gradient(linear, left top, left bottom, from(rgba(21, 21, 24, 0.8)), color-stop(50%, rgba(21, 21, 24, .9)), to(#151518)), url(../img/backgrounds/land-info-back.jpg) no-repeat top center /200%;
+		background: -o-linear-gradient(top, rgba(21, 21, 24, 0.8) 0%, rgba(21, 21, 24, .9) 50%, #151518 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top center /200%;
 		background: linear-gradient(180deg, rgba(21, 21, 24, 0.8) 0%, rgba(21, 21, 24, .9) 50%, #151518 100%), url(../img/backgrounds/land-info-back.jpg) no-repeat top center /200%;
 	}
 
@@ -1792,48 +1788,41 @@ display: none;
 	position: fixed;
 	bottom: 5%;
 	right: 5%;
-	width:0px;
-	height:0px;
+	width: 0px;
+	height: 0px;
 	background-color: #000;
 	border-radius: 50%;
-	-webkit-transition: .2s liner;
-	-o-transition: .2s liner;
 	transition: .2s liner;
 	cursor: pointer;
 	z-index: 11;
-	-webkit-box-shadow:0px 0px 10px 2px #000;
-	        box-shadow:0px 0px 10px 2px #000;
-	-webkit-transition: .2s linear;
-	-o-transition: .2s linear;
+	box-shadow: 0px 0px 10px 2px #000;
 	transition: .2s linear;
 	opacity: 0;
-	-webkit-transform: translate(-100%, -100%);
-	    -ms-transform: translate(-100%, -100%);
-	        transform: translate(-100%, -100%);
-	
+	transform: translate(-100%, -100%);
+
 }
-.to__top.active{
-	width:50px;
-	height:50px;
+
+.to__top.active {
+	width: 50px;
+	height: 50px;
 	opacity: 1;
-	-webkit-transform: translate(0%, 0%);
-	    -ms-transform: translate(0%, 0%);
-	        transform: translate(0%, 0%);
+	transform: translate(0%, 0%);
 }
+
 .to__top svg {
 	margin-top: -5px;
 	width: 100%;
 }
-.to__top path{
-	fill:#fff;
-	-webkit-transition: .2s linear;
-	-o-transition: .2s linear;
+
+.to__top path {
+	fill: #fff;
 	transition: .2s linear;
 }
-	.to__top:hover path{
-	fill:#FAC704;
+
+.to__top:hover path {
+	fill: #FAC704;
 }
-.to__top:active{
-	-webkit-box-shadow:none;
-	        box-shadow:none;
+
+.to__top:active {
+	box-shadow: none;
 }
